Bug 486391 - QMplay2 crashes when using Vaapi on Wayland
Summary: QMplay2 crashes when using Vaapi on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL: https://gitlab.freedesktop.org/mesa/m...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-01 10:14 UTC by Mike Lothian
Modified: 2024-05-21 23:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments
WAYLAND_DEBUG=1 (90.27 KB, text/plain)
2024-05-01 18:05 UTC, Mike Lothian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Lothian 2024-05-01 10:14:56 UTC
This is using Plasma 6.1 git, KF6 git, Mesa git and QMplay2 from git

QMPlay2 
libva info: VA-API version 1.21.0
libva info: Trying to open /usr/lib64/va/drivers/radeonsi_drv_video.so
libva info: Found init function __vaDriverInit_1_21
libva info: va_openDriver() returns 0
VA-API :: Initialized device: renderD129
wp_linux_drm_syncobj_surface_v1@107: error 4: explicit sync is used, but no acquire point is set
[01 May 2024 11:04:45.448] The Wayland connection experienced a fatal error: Protocol error


This appears to be triggered by the landing of https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/28874

The error message about the no acquire point I think is from the much older https://invent.kde.org/plasma/kwin/-/merge_requests/4693

I'm raising a bug with the Mesa folk too, but I'm not 100% sure if this is a Mesa, Kwin or QMplay2 bug
Comment 1 David Edmundson 2024-05-01 14:59:58 UTC
As you have a git master of everything, could you attach output of

WAYLAND_DEBUG=1  qplay2

It'll help confirm which side the bug is
Comment 2 Mike Lothian 2024-05-01 18:05:26 UTC
I have a feeling its related to the vulkan-{header,loader,etc etc} being updated to 1.3.280
Comment 3 Mike Lothian 2024-05-01 18:05:51 UTC
Created attachment 169082 [details]
WAYLAND_DEBUG=1
Comment 4 Zamundaaa 2024-05-01 21:04:33 UTC
I had the bug id wrong at first, https://invent.kde.org/plasma/kwin/-/merge_requests/5683 fixes this
Comment 5 Mike Lothian 2024-05-02 00:53:59 UTC
It does indeed, feel free to add my:

Tested-by: Mike Lothian <mike@fireburn.co.uk>
Comment 6 Zamundaaa 2024-05-21 23:57:50 UTC
Git commit 0f4123951599cfdc99b53cde6911990158151293 by Xaver Hugl.
Committed on 21/05/2024 at 22:26.
Pushed by zamundaaa into branch 'master'.

waylandserver: set render backend for linuxdrmsyncobj directly

The code would previously never set the render backend, causing the use of explicit sync
to fail

M  +0    -4    src/platformsupport/scenes/opengl/abstract_egl_backend.cpp
M  +4    -0    src/wayland_server.cpp

https://invent.kde.org/plasma/kwin/-/commit/0f4123951599cfdc99b53cde6911990158151293