waylandserver: set render backend for linuxdrmsyncobj directly

The code would previously never set the render backend, causing the use of explicit sync
to fail

BUG: 486391